<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/splash_user">

        </ImageView>



    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/rl_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_below="@id/rl_image"

        android:layout_marginRight="@dimen/_10sdp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/prompster"
    android:textSize="@dimen/_25ssp"
    android:textColor="@color/black"

    >

</TextView>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/value_prom"
    android:textSize="@dimen/_25ssp"
        android:layout_marginTop="@dimen/_5sdp"
    android:textColor="@color/black"

    >

</TextView>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/message_onee"
    android:textSize="@dimen/_25ssp"
        android:layout_marginTop="@dimen/_5sdp"
    android:textColor="@color/black"

    >

</TextView>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/start_writing"
    android:textSize="@dimen/_13ssp"
        android:layout_marginTop="@dimen/_20sdp"
    android:textColor="#8A8A8A"

    >

</TextView>


</LinearLayout>





    </RelativeLayout>





</RelativeLayout>