<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Profile_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/rl_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:background="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Profile"
                    android:textSize="@dimen/_12ssp"

                    >

                </TextView>
                <View
                    android:id="@+id/viewww"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/iv_back"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="#E4DFDF">
                </View>
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>




        <RelativeLayout
            android:id="@+id/rl_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_back"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp">


            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/user_placeholder">


            </ImageView>


            <TextView
                android:id="@+id/tv_pname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_toRightOf="@id/iv_image"
                android:textColor="@color/black"
                android:text="Dante Moore"
                android:textSize="@dimen/_13ssp">

            </TextView>

            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_pname"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_toRightOf="@id/iv_image"
android:layout_marginTop="@dimen/_5sdp"
                android:text="Danta123@gmail.com"
                android:textSize="@dimen/_11ssp">

            </TextView>
        </RelativeLayout>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_image"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>

        <RelativeLayout
            android:id="@+id/rl_subscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Subscription"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/free"
                android:textSize="@dimen/_11ssp">


            </TextView>

        </RelativeLayout>

        <View
            android:id="@+id/vieww"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_subscription"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>


        <RelativeLayout
            android:id="@+id/rl_apppurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vieww"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_inapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/free"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:visibility="gone">


            </TextView>

        </RelativeLayout>

        <View
            android:id="@+id/vieww_app"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_apppurchase"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>

        <RelativeLayout
            android:id="@+id/rl_editorsetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_apppurchase"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="@string/editor"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>


        </RelativeLayout>

        <View
            android:id="@+id/view_setting"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_editorsetting"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>


        <RelativeLayout
            android:id="@+id/rl_howtovideos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_setting"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_teleprompter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tele_promptersetting"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>


        </RelativeLayout>

        <View
            android:id="@+id/view_videos"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_howtovideos"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>


        <RelativeLayout
            android:id="@+id/rl_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_videos"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_tovidesos"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>


        </RelativeLayout>

        <View
            android:id="@+id/view_faq"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_faq"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>


        <RelativeLayout
            android:id="@+id/rl_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_faq"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>


        </RelativeLayout>

        <View
            android:id="@+id/view_review"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_review"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>


        <RelativeLayout
            android:id="@+id/rl_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_review"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>


        </RelativeLayout>

        <View
            android:id="@+id/view_support"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_support"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>


        <RelativeLayout
            android:id="@+id/rl_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_support"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>


        </RelativeLayout>

        <View
            android:id="@+id/view_app"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_apps"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>


        <RelativeLayout
            android:id="@+id/rl_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_app"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp">


            </TextView>


        </RelativeLayout>

        <View
            android:id="@+id/view_logout"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_logout"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>


        <RelativeLayout
            android:id="@+id/rl_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_logout"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp">


            </TextView>


        </RelativeLayout>

        <View
            android:id="@+id/view_logouttr"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/rl_logout"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#E4DFDF">


        </View>

        <RelativeLayout
            android:id="@+id/rl_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_logouttr"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="@dimen/_14ssp">


            </TextView>


        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>